# Circuit-Oracle

./: .env.example  .gitignore  README.md  pyproject.toml
experiments/refusal/: README.md
experiments/refusal/data/: prompts.json
experiments/refusal/exp/: judge_summary.json  judge_summary.md
experiments/refusal/scripts/: download_weights.py  run_all.py
experiments/secret-elicitation/: README.md  build_taboo_graphs.py  download_graphs.py  eval_oracle_taboo.py  eval_oracle_taboo_no_options.py  print_table.sh  run_autointerp_server.py  run_oracle_on_taboo.py  run_oracle_on_taboo_no_options.py
experiments/secret-elicitation/autointerp_cache/: summary.json
experiments/secret-elicitation/oracle_taboo_results/: eval.json
experiments/secret-elicitation/oracle_taboo_results_no_options/: eval.json
experiments/spurious-correlations/: README.md  circuit_extraction.py  download_graphs.py  eval_oracle_feature_counts.py  judge_sae_features.py  prompts.json  rank_sae_features_by_probe.py  run_extraction_batch.py  run_oracle_on_probes.py
experiments/spurious-correlations/adapters/: __init__.py  base.py  bias_in_bios.py  civil_comments.py  generic_hf.py  multinli.py
experiments/spurious-correlations/probe_extraction/: README.md  layer_sweep.py  probe_model.py  train_probes.py
src/circuit_oracle/: __init__.py  autointerp.py  autointerp_server.py  config.py  control.py  graph_compute.py  llm_client.py  neuronpedia_link.py  orchestrator.py  position_attribution.py  query.py  saving.py  self_rating.py  skills.py  subagent.py  tool_schemas.py  tools.py  viz.py
(+988 files in other folders)
